# meghaos-x86

./: .clang-format  BUGS  CHANGES.md  CMakeLists.txt  LICENSE  README.md  TODO  build.sh  compile_flags.txt  create-floppyimg.sh  functions.sh  lint.sh  run.sh  tags
.github/workflows/: mosbuild.yaml  osbuild.yaml  utbuild.yaml
bootloader/x86/: build.sh
bootloader/x86/boot1/: a20gate.s  boot1.s  gdt.s
cmake/: BuildZig.cmake  FindZig.cmake  GenConfigHeaderFile.cmake  assemble.cmake  compile_assemble_link.cmake  compile_link.cmake  mosflags.cmake
cmake/x86/: commonflags.cmake  kernelflags.cmake  mosflags.cmake  unittestflags.cmake  userflags.cmake
docs/: Index.md  PMM_Calculations.ods  collate.sh  general.md  index.md  index_template.md  memmap.ods  paging.ods  titles.sh  ui.md  x86_intel_protection.odt
docs/images/: mos.rbm  mos.xcf
docs/notes/: BUGS.md  CrossPlatform.md  Scratch.md  TODO.md  Vbe.md  abi.md  abstract_design.md  assert-panic-in-meghaos.md  changes.md  clocktick.md  cmake-build.md  coding_style.md  gdt.md  general.md  interrupt_handling.md  kmalloc.md  memorymanagement.md  object_file_format.md  opaque_data_types.md  paging.md  physical_memory_allocation.md  physical_memory_manager.md  processman.md  recursive_map_clarity_with_example.md  source_tree_style.md  syscall.md  ui.md  usermode_stack.md  virtual_memory_manager.md  vmm.md  when-to-assert.md
docs/x86/: coding_style.md  gdt.md  memmap.ods  naming.md  paging.md  paging.ods  source_tree_style.md
docs/x86/manual/: coding_style.md  interrupt_handling.md  physical_memory_mamager.md  physical_memory_manager.md
docs/x86/notes/: gdt.md  memorymanagement.md  virtual_memory_manager.md
include/: assert.h  bitmap.h  buildcheck.h  compositor.h  config.h  disp.h  errno.h  graphics.h  guicolours.h  handle.h  interrupt.h  intrusive_list.h  intrusive_queue.h  ints.h  io.h  kassert.h  kbuild.h.in  kcmlib.h  kdebug.h  kernel.h  kerror.h  kgraphics.h  kmalloc.h  kprocess.h  kstdlib.h  limits.h  mem.h  memloc.h  memmanage.h  moslimits.h  mosunittest.h  paging.h  panic.h  pmm.h  process.h  types.h  utils.h  vmm.h  vmm_struct.h
include/applib/: app.h  graphics.h  osif.h  syscall.h  types.h
include/asm/: csh.s
include/cm/: app.h  cm.h  debug.h  err.h  graphics.h  osif.h  syscall.h
include/common/: bitmap.h
include/drivers/pc/x86/: 8259_pic.h
include/drivers/x86/pc/: 8042_ps2.h  (+4 more)
include/mock/cm/: cm.h
include/mock/common/: bitmap.h  utils.h
include/mock/kernel/: bitmap.h  kmalloc.h  kstdlib.h  mem.h  paging.h  pmm.h  salloc.h  vmm.h
include/moslib/: ulib.h
include/unittest/: fake.h  unittest.h  yukti.h
include/x86/: boot.h  boot_struct.h  config.h  cpu.h  gdt.h  gdt_struct.h  idt.h  idt_struct.h  interrupt.h  io.h  kernel.h  kprocess.h  limits.h  mem.h  memloc.h  moslimits.h  paging.h  pmm.h  process.h  tss.h  types.h  vgacolors.h  vgatext.h
include/x86/asm/: errno.inc  mos.inc
kernel/: build.sh  errno.c  kernel.c  kpanic.c  mem.c  printk.c
kernel/x86/: build.sh  gdt.c  idt.c  kernel.c  kernel.s  paging.s  screen.c  tss.c  usermode.s  vgadisp.c
scripts/: create-floppyimg.sh  invokeprog.sh  lint.sh  postbuild.sh  run.sh
src/apps/: CMakeLists.txt  gui0.c  init.c  mpdemo.c  proc1.c
src/apps/applib/: CMakeLists.txt  app.c  debug.c  graphics.c  printf.c  syscalls.c
src/apps/applib/x86/: crta.c
src/apps/moslib/: CMakeLists.txt  syscalls.c
src/apps/zapps/: CMakeLists.txt  MosBuild.zig  build.sh  build.zig  hello.zig  mos_build.zig
src/apps/zapps/hello/: build.zig  build.zig.zon  main.zig
src/apps/zapps/zm/src/: debug.zig  process.zig  root.zig
src/apps/zig/: CMakeLists.txt  mos_build.zig
src/apps/zig/triangle/: Canvas.zig  build.zig  build.zig.zon  main.zig
src/apps/zig/zello/: build.zig  build.zig.zon  main.zig
src/apps/zig/zm/: build.zig  build.zig.zon  mos_build.zig
src/apps/zig/zm/src/: debug.zig  graphics.zig  process.zig  root.zig  syscalls.zig  window.zig
src/bootloader/x86/: CMakeLists.txt  build.sh
src/cm/: CMakeLists.txt  app.c  cm.c  debug.c  graphics.c  malloc.c  printf.c  process.c  string.c  syscalls.c
src/cm/x86/: crta.c
src/common/: CMakeLists.txt  bitmap.c  kmalloc.c  utils.c
src/kernel/: CMakeLists.txt  bitmap.c  build.sh  compositor.c  disp.c  errno.c  graphics.c  handle.c  kdebug.c  kerror.c  kgraphics.c  kmalloc.c  kpanic.c  kstdlib.c  mem.c  pmm.c  printk.c  salloc.c  syscalls.c  vmm.c
src/kernel/drivers/pc/x86/: 8259_pic.c  CMakeLists.txt
src/kernel/drivers/x86/pc/: 8042_ps2.c  8254_pit.c  8259_pic.c  CMakeLists.txt  pcspeaker.c  ps2kb.c  ps2mouse.c
src/kernel/x86/: CMakeLists.txt  _gas_paging.s  boot.c  build.sh  entry.s  gdt.c  idt.c  interrupts.c  kdebug.c  kernel.c  kernel.ld  kmalloc.c  kprocess.c  memmanage.c  paging.c  paging.s  pmm.c  process.c  process.ld  syscalls.c  tss.c  usermode.s  vgadisp.c  vgatext.c
src/mock/: build-x86.sh  build.sh  mockfortests_x86.cmake
src/mock/cm/: cm.c
src/mock/common/: bitmap.c  kmalloc.c  utils.c
src/mock/kernel/: bitmap.c  kmalloc.c  kstdlib.c  mem.c  paging.c  pmm.c  salloc.c  vmm.c
src/moslib/: CMakeLists.txt
src/moslib/userland/: syscalls.c
src/unittests/: .build.sh.swp  CMakeLists.txt  bitmap_test.c  build.sh  c99_conformance_test.c  common.c  handle_test.c  intrusive_list_test.c  intrusive_queue_test.c  kmalloc_test.c  kstdlib_test.c  mem_test.c  paging_test.c  pmm_test.c  printk_test.c  salloc_test.c  unittest.c  utils_test.c
src/unittests/cm/: CMakeLists.txt  common.c  malloc_test.c  printf_test.c  string_test.c
src/unittests/kernel/: CMakeLists.txt  bitmap_test.c  c99_conformance_test.c  common.c  handle_test.c  intrusive_list_test.c  intrusive_queue_test.c  kmalloc_test.c  kstdlib_test.c  paging_test.c  pmm_test.c  printk_test.c  salloc_test.c  utils_test.c
src/unittests/kernel/x86/: CMakeLists.txt  paging_test.c  pmm_test.c
src/unittests/x86/: CMakeLists.txt  build.sh  paging_test.c  pmm_test.c
src/userland/: CMakeLists.txt  build.sh  mpdemo.c  proc1.c  process1.c
tools/: build_i686_gcc.sh  changenames.sh  indent.sh  toolchain-i686-elf-pc.cmake
(+19 files in other folders)
